plowshare (0.7.2) unstable; urgency=low

  * [download] New option -o DIR, --output-directory DIR
  * [megaupload] Use tesseract as OCR for the new simplier captcha
  * [megaupload] Support for multifetch uploads (thanks to netload)

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 16 May 2009 11:52:51 +0200

plowshare (0.7.1) unstable; urgency=low

  * Improve download/upload loops (retry on non-fatal network problems)
  * Fix test library
  * [mediafire] update module to website changed in HTML

 -- Arnau Sanchez <pyarnau@gmail.com>  Sun, 03 May 2009 22:49:31 +0200

plowshare (0.7) unstable; urgency=low

  * [zshared] add module (download) 
  * [megaupload] refactor catpcha decoder

 -- Arnau Sanchez <pyarnau@gmail.com>  Wed, 15 Apr 2009 18:23:05 +0200

plowshare (0.6) unstable; urgency=low

  * [4shared] add module and download support for 4shared
  * [megaupload] increase slightly the OCR rate (~ 40%)
  * [download] add check-link support for all existing modules

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 28 Mar 2009 15:51:48 +0100

plowshare (0.5.3) unstable; urgency=low

  * [megaupload] Support new 4-rotated-highly-overlapped captcha 

 -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 21 Mar 2009 00:09:22 +0100

plowshare (0.5.2) unstable; urgency=low

  * Fix setup.sh bugs 

 -- Arnau Sanchez <pyarnau@gmail.com>  Sun, 15 Mar 2009 01:08:57 +0100

plowshare (0.5.1) unstable; urgency=low

  * Add suport for the new 4-rotated-bold-character megaupload captcha
  * Change arguments order for plowup

 -- Arnau Sanchez <tokland@gmail.com>  Sat, 14 Mar 2009 23:38:31 +0100

plowshare (0.5) unstable; urgency=low

  * Support new megaupload captcha (4 non-rotated chars)
  * Add suport for mediafire download
  * Add GNU GPL notices to all sources

 -- Arnau Sanchez <tokland@gmail.com>  Mon, 09 Mar 2009 17:34:04 +0100

plowshare (0.4.5) unstable; urgency=low

  * Improved speed of Megaupload catpcha OCR
  * Removed JDownloader database