@@ -3,6 +3,7 @@ plowshare (0.7.2) unstable; urgency=low
   * [download] New option -o DIR, --output-directory DIR
   * [megaupload] Use tesseract as OCR for the new simplier captcha
   * [megaupload] Support for multifetch uploads (thanks to netload)
+  * [rapidshare] More tolerant parsing for 'wait messages' from website
 
  -- Arnau Sanchez <pyarnau@gmail.com>  Sat, 16 May 2009 11:52:51 +0200
 
